--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"dev": "parcel src/index.html",
 		"format": "prettier \"src/**/*.{js, html}\" --write",
 		"lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -28,6 +29,11 @@
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.14.3",
 		"eslint-plugin-react-hooks": "^1.7.0",
+		"parcel-bundler": "^1.12.3",
 		"prettier": "^1.18.2"
+	},
+	"dependencies": {
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0"
 	}
 }
