--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/tjoaquini/complete-intro-to-react-v5#readme",
 	"devDependencies": {
+		"babel-eslint": "^10.0.3",
 		"eslint": "^6.2.2",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.1.0",
@@ -33,6 +34,7 @@
 		"prettier": "^1.18.2"
 	},
 	"dependencies": {
+		"@frontendmasters/pet": "^1.0.3",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
 	}
