--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "parcel src/index.html",
+		"dev:mock": "cross-env PET_MOCK=mock npm run dev",
 		"format": "prettier \"src/**/*.{js, html}\" --write",
 		"lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +23,7 @@
 	"homepage": "https://github.com/tjoaquini/complete-intro-to-react-v5#readme",
 	"devDependencies": {
 		"babel-eslint": "^10.0.3",
+		"cross-env": "^5.2.0",
 		"eslint": "^6.2.2",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.1.0",
@@ -37,5 +39,16 @@
 		"@frontendmasters/pet": "^1.0.3",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
-	}
+	},
+	"browserslist": [
+		"last 2 Chrome versions",
+		"last 2 ChromeAndroid versions",
+		"last 2 Firefox versions",
+		"last 2 FirefoxAndroid versions",
+		"last 2 Safari versions",
+		"last 2 iOS versions",
+		"last 2 Edge versions",
+		"last 2 Opera versions",
+		"last 2 OperaMobile versions"
+	]
 }
