--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"@frontendmasters/pet": "^1.0.3",
+		"@reach/router": "^1.2.1",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
 	},
