--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,10 @@
 		"sourceType": "module"
 	},
 	"plugins": ["react", "import", "jsx-a11y", "react-hooks", "prettier"],
+	"parser": "babel-eslint",
 	"rules": {
 		"react/prop-types": 0,
+		"react/state-in-constructor": 0,
 		"no-console": 1,
 		"react-hooks/rules-of-hooks": 2,
 		"react-hooks/exhaustive-deps": 1,
