--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
 	},
 	"homepage": "https://github.com/tjoaquini/complete-intro-to-react-v5#readme",
 	"devDependencies": {
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.3",
 		"cross-env": "^5.2.0",
 		"eslint": "^6.2.2",
