--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"dev:mock": "cross-env PET_MOCK=mock npm run dev",
 		"format": "prettier \"src/**/*.{js, html}\" --write",
 		"lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest",
+		"test:update": "jest -u",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"repository": {
 		"type": "git",
@@ -26,6 +29,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
+		"@testing-library/react": "^9.1.4",
 		"babel-eslint": "^10.0.3",
 		"cross-env": "^5.2.0",
 		"eslint": "^6.2.2",
@@ -36,6 +40,7 @@
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.14.3",
 		"eslint-plugin-react-hooks": "^1.7.0",
+		"jest": "^24.9.0",
 		"parcel-bundler": "^1.12.3",
 		"prettier": "^1.18.2"
 	},
