--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "parcel build --public-url ./dist/ src/index.html",
 		"dev": "parcel src/index.html",
 		"dev:mock": "cross-env PET_MOCK=mock npm run dev",
 		"format": "prettier \"src/**/*.{js, html}\" --write",
 		"lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
+		"start": "npm run build && babel-node server/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -40,8 +42,11 @@
 		"prettier": "^1.18.2"
 	},
 	"dependencies": {
+		"@babel/node": "^7.6.2",
 		"@frontendmasters/pet": "^1.0.3",
 		"@reach/router": "^1.2.1",
+		"babel-cli": "^6.26.0",
+		"express": "^4.17.1",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
 	},
