--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"dev": "parcel src/index.html",
 		"dev:mock": "cross-env PET_MOCK=mock npm run dev",
 		"format": "prettier \"src/**/*.{js, html}\" --write",
-		"lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"lint": "tslint --preoject",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"typecheck": "tsc --noEmit"
 	},
 	"repository": {
 		"type": "git",
@@ -26,24 +27,24 @@
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
-		"babel-eslint": "^10.0.3",
+		"@types/reach__router": "^1.2.5",
+		"@types/react": "^16.9.4",
+		"@types/react-dom": "^16.9.1",
 		"cross-env": "^5.2.0",
-		"eslint": "^6.2.2",
 		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-prettier": "^6.1.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.0",
-		"eslint-plugin-react": "^7.14.3",
-		"eslint-plugin-react-hooks": "^1.7.0",
 		"parcel-bundler": "^1.12.3",
-		"prettier": "^1.18.2"
+		"prettier": "^1.18.2",
+		"tslint": "^5.20.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-react": "^4.1.0"
 	},
 	"dependencies": {
 		"@frontendmasters/pet": "^1.0.3",
 		"@reach/router": "^1.2.1",
 		"react": "^16.9.0",
-		"react-dom": "^16.9.0"
+		"react-dom": "^16.9.0",
+		"typescript": "^3.6.3"
 	},
 	"browserslist": [
 		"last 2 Chrome versions",
